fixed collapse margins

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -66,6 +66,10 @@ body {
   float: left;
 }
 
+.masthead-collapse {
+  margin-bottom: -146px;
+}
+
 #toggle-nav {
   margin-top: -10px;
   &:hover {
